#3 FEAT : Swagger 활용 - Springdoc-openapi 라이브러리 활용
warning : RestController 내에 정의된 메서드만 명시됩니다.

application.properties에 아래 추가
# swagger-ui custom path
springdoc.swagger-ui.path=/swagger-ui.html

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+    // Swagger 활용하기 위한 springdoc-openapi 라이브러리
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
     // JWT
     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
