--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,23 @@ dependencies {
     // MySQL
     implementation 'mysql:mysql-connector-java:8.0.28'
 
+    // SMTP
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+    // QueryDSL
+    // QueryDSL JPA 라이브러리를 프로젝트에 추가합니다. 이 라이브러리는 JPA 엔터티와 관련된 동적 쿼리를 생성하는 데 사용
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    // QueryDSL APT(Annotation Processing Tool)를 프로젝트에 추가합니다.
+    // QueryDSL이 JPA 엔터티를 기반으로 동적 쿼리 클래스를 생성할 때 필요한 프로세스입니다.
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    // Jakarta EE 애노테이션 API를 프로젝트에 추가합니다.
+    // 이는 Jakarta EE 애노테이션을 사용하여 JPA 엔터티를 정의할 때 필요한 라이브러리입니다.
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    // Jakarta EE Persistence API를 프로젝트에 추가합니다.
+    // 이 라이브러리는 Jakarta EE와 관련된 JPA 엔터티를 정의할 때 필요한 라이브러리입니다.
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
