--- a/build.gradle
+++ b/build.gradle
@@ -59,15 +59,19 @@ dependencies {
     // QueryDSL
     // QueryDSL JPA 라이브러리를 프로젝트에 추가합니다. 이 라이브러리는 JPA 엔터티와 관련된 동적 쿼리를 생성하는 데 사용
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    // QueryDSL APT(Annotation Processing Tool)를 프로젝트에 추가합니다.
-    // QueryDSL이 JPA 엔터티를 기반으로 동적 쿼리 클래스를 생성할 때 필요한 프로세스입니다.
+    // QueryDSL APT(Annotation Processing Tool): QueryDSL이 JPA 엔터티를 기반으로 동적 쿼리 클래스를 생성할 때 필요한 프로세스
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
-    // Jakarta EE 애노테이션 API를 프로젝트에 추가합니다.
-    // 이는 Jakarta EE 애노테이션을 사용하여 JPA 엔터티를 정의할 때 필요한 라이브러리입니다.
+    // Jakarta EE 애노테이션 API: Jakarta EE 애노테이션을 사용하여 JPA 엔터티를 정의할 때 필요한 라이브러리입니다.
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-    // Jakarta EE Persistence API를 프로젝트에 추가합니다.
-    // 이 라이브러리는 Jakarta EE와 관련된 JPA 엔터티를 정의할 때 필요한 라이브러리입니다.
+    // Jakarta EE Persistence API: 이 라이브러리는 Jakarta EE와 관련된 JPA 엔터티를 정의할 때 필요한 라이브러리입니다.
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // WebSocket 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+//    implementation 'org.webjars:sockjs-client:1.5.1'
+//    implementation 'org.webjars:stomp-websocket:2.3.4'
+//    implementation 'org.springframework:spring-messaging:6.0.3'
+//    implementation 'org.springframework.security:spring-security-messaging:6.0.2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
