--- a/build.gradle
+++ b/build.gradle
@@ -73,9 +73,9 @@ dependencies {
 
     // WebSocket 의존성
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-//    implementation 'org.webjars:sockjs-client:1.5.1'
-//    implementation 'org.webjars:stomp-websocket:2.3.4'
-//    implementation 'org.springframework:spring-messaging:6.0.3'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+    implementation 'org.springframework:spring-messaging:6.0.3'
 //    implementation 'org.springframework.security:spring-security-messaging:6.0.2'
 
     // MongoDB 의존성
