--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // 스프링 로컬 캐싱 활용
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
     // Swagger 활용하기 위한 springdoc-openapi 라이브러리
     //implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
