--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,14 @@ jobs:
     - name: checkout release
       uses: actions/checkout@v3
 
-    - name: Create temp directory
-      run: mkdir temp_dir
-
-    - name: Copy contents to temp directory
-      run: cp -r $GITHUB_WORKSPACE/* temp_dir/
-
-    - name: Archive drcloud 
-      run: tar cvfz ./drcloud.tar.gz -C temp_dir/ .
+    # Runs a single command using the runners shell 
+    - name: Clean temp directory
+      run: |
+        rm -rf *
+        cp -r $GITHUB_WORKSPACE/* .
+      
+    - name: archive drcloud 
+      run: tar cvfz ./drcloud.tar.gz *
        
     - name: AWS configure credentials
       uses: aws-actions/configure-aws-credentials@v1
