--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
     # Runs a single command using the runners shell 
     - name: Clean temp directory
       run: |
+        mkdir $GITHUB_WORKSPACE
         rm -rf *
         cp -r $GITHUB_WORKSPACE/* .
       
