--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,8 @@ jobs:
     # Runs a single command using the runners shell 
     - name: Clean temp directory
       run: |
-        mkdir $GITHUB_WORKSPACE
-        rm -rf *
-        cp -r $GITHUB_WORKSPACE/* .
+            rm -rf *
+            cp -r $GITHUB_WORKSPACE/. .
       
     - name: archive drcloud 
       run: tar cvfz ./drcloud.tar.gz *
