--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     # Runs a single command using the runners shell 
     - name: Clean temp directory
       run: |
-            rm -rf *
+            find . -mindepth 1 -delete
             cp -r $GITHUB_WORKSPACE/. .
       
     - name: archive drcloud 
