--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,60 +1,55 @@
-# This is a basic workflow to help you get started with Actions
+name: CI/CD Workflow
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # 지정한 branch에서 push/pull_request 에 해당하는 command가 수행되면 이 workflow가 동작 합니다. 
-  # 여기서는 간단히 main 브런치에서 push되면서 이 workflow가 실행 되도록 하겠습니다.
   push:
-    branches: [ main ] 
- 
-  # 이부분은 위의 trigger가 없어도 수동으로 동작 할 수 있게끔 해주는 역할을 합니다.
-  workflow_dispatch:
+    branches:
+      - main
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build" 
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: checkout release
-      uses: actions/checkout@v3
-      
-    - name: archive drcloud 
-      run: tar cvfz ./drcloud.tar.gz *
-       
-    - name: AWS configure credentials
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: '17'
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew clean build -x test
+
+    - name: Archive artifacts
+      run: tar cvfz drcloud.tar.gz build/*
+
+    - name: Upload to S3
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
-        
-    - name: upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./drcloud.tar.gz s3://elephantcodingclub/archive/
-      
-    - name: deploy with AWS codeDeploy
-      run: aws deploy create-deployment
-        --application-name githubaction-elephant
-        --deployment-config-name CodeDeployDefault.OneAtATime
-        --deployment-group-name githubaction-elephant-group
-        --s3-location bucket=elephantcodingclub,bundleType=tgz,key=archive/drcloud.tar.gz
+      run: aws s3 cp drcloud.tar.gz s3://elephantcodingclub/archive/
 
-    - name: JDK 17 설치
-      uses: actions/setup-java@v3
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-          java-version: '17'
-          distribution: 'corretto'
-        
-    # ./gradlw 실행 권한 부여
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-      shell: bash
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
 
-    # 프로젝트 build
-    - name: Build with Gradle
-      run: ./gradlew clean build -x test
-      shell: bash
+    - name: Deploy with AWS CodeDeploy
+      run: aws deploy create-deployment \
+        --application-name githubaction-elephant \
+        --deployment-config-name CodeDeployDefault.OneAtATime \
+        --deployment-group-name githubaction-elephant-group \
+        --s3-location bucket=elephantcodingclub,bundleType=tgz,key=archive/drcloud.tar.gz
