--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,23 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
         shell: bash
+
+      # 현재 스크립트에서 사용할 환경변수를 정의하여 사용
+      env:
+        S3_BUCKET_NAME: S3 버킷 이름
+        AWS_REGION: ap-northeast-2
+
+      # build job 내부에 새로운 steps 추가
+      - name: Make zip file
+        run: zip -r ./$GITHUB_SHA.zip .
+        shell: bash
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
