--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs: # 병렬로 실행되는 작업 단위, 여러 step으로 이루어짐
     
     # 압축한 프로젝트를 S3로 전송
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$elephantcodingclub/practice-deploy.zip
+      run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://\$elephantcodingclub/practice-deploy.zip
