--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
 name: Java CI with Gradle # Workflow 이름
 
+env:
+  S3_BUCKET_NAME: apupu-build
+  CODE_DEPLOY_APP_NAME: Apupu
+  CODE_DEPLOY_GROUP_NAME: Apupu-group
+
 on: # Workflow를 자동으로 트리거 하기 위한 이벤트
   release:
     types: [push] # push를 하면 자동으로 실행
@@ -48,3 +53,7 @@ jobs: # 병렬로 실행되는 작업 단위, 여러 step으로 이루어짐
     # 압축한 프로젝트를 S3로 전송
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://elephantcodingclub/practice-deploy.zip
+
+       # 배포 그룹으로 애플리케이션 전송
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name githubaction-elephant --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name githubaction-elephant-group --s3-location bucket=elephantcodingclub,bundleType=zip,key=practice-deploy.zip
