--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs: # 병렬로 실행되는 작업 단위, 여러 step으로 이루어짐
     
     # ./gradlw 실행 권한 부여
     - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      run: chmod 777 ./gradlew
       shell: bash
 
     # application.properties 생성
