--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,25 @@ jobs: # 병렬로 실행되는 작업 단위, 여러 step으로 이루어짐
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://elephantcodingclub/practice-deploy.zip
 
-       # 배포 그룹으로 애플리케이션 전송
+    # 배포 그룹으로 애플리케이션 전송
     - name: Code Deploy
       run: aws deploy create-deployment --application-name githubaction-elephant --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name githubaction-elephant-group --s3-location bucket=elephantcodingclub,bundleType=zip,key=practice-deploy.zip
+
+    # SSH into the EC2 instance and check for running Java processes
+    - name: search runched file and reRun .jar file
+      run: |
+        processes=$(ssh ubuntu@${{ec2_INSTANCE_PRIVATE_IP}} "ps -ef | grep java")
+       
+        num_processes=$(echo "$processes" | grep -c "java")
+
+        if [ "$num_processes" -eq 1 ]; then
+          ssh ubuntu@${{ec2_INSTANCE_PRIVATE_IP}} "nohup java -jar ~/app/step2/zip/build/libs/*.jar &"
+        elif [ "$num_processes" -gt 1 ]; then
+          pids=$(echo "$processes" | awk '{print $2}')
+          for pid in $pids; do
+            ssh ubuntu@${{ec2_INSTANCE_PRIVATE_IP}} "kill $pid"
+          done
+          ssh ubuntu@${{ec2_INSTANCE_PRIVATE_IP}} "nohup java -jar ~/app/step2/zip/build/libs/*.jar &"
+        else
+          ssh ubuntu@${{ec2_INSTANCE_PRIVATE_IP}} "nohup java -jar ~/app/step2/zip/build/libs/*.jar &"
+        fi
