--- a/appspec.yml
+++ b/appspec.yml
@@ -9,5 +9,5 @@ hooks: # CodeDeploy 수명 주기 중 하나인 AfterInstall(설치 끝났을때
   AfterInstall:
     - location: scripts/deploy.sh
       timeout: 60
-      rusan: ubuntu
+      runas: ubuntu
 
